fixed a little layout issue

--- a/public/stylesheets/ie.css
+++ b/public/stylesheets/ie.css
@@ -4,6 +4,6 @@
 }
 
 #agreement_new_account {
-  height:10px;
-  width:10px;
+  height:9px;
+  width:9px;
 }
